docs: 记录Nginx实践及添加angluar commit message规范

--- a/css/main.css
+++ b/css/main.css
@@ -1807,7 +1807,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #9ced5d;
+  background: #a8fffb;
 }
 .links-of-blogroll {
   font-size: 13px;
